app/public/assets/front/css/header/header.css
/* -----------------------------------------
	Header CSS
----------------------------------------- */
.header-area {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 999;
}

.header-area.header-static {
    position: relative;
}

.header-area.is-sticky {
    position: fixed;
    background: rgba(var(--color-white-rgb), 0.9);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    backdrop-filter: saturate(180%) blur(20px);
    box-shadow: 0px 8px 60px rgba(24, 24, 24, 0.1);
    -webkit-animation: slideDown 0.5s ease-out 1;
    animation: slideDown 0.5s ease-out 1;
}

.header-area .more-option {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    flex-wrap: wrap;
    gap: 16px;
}

.header-area .more-option .more-option-toggle {
    z-index: 11;
    font-size: 25px;
    padding: 10px;
}

.header-area .more-option .item {
    position: relative;
}

.header-area .navbar-nav {
    -webkit-margin-start: auto;
    margin-inline-start: auto;
    -webkit-margin-end: 60px;
    margin-inline-end: 60px;
}

.header-area .nav-link {
    position: relative;
    padding-top: 30px;
    padding-bottom: 30px;
    color: var(--color-dark);
    font-weight: var(--font-semi-bold);
}

.header-area .nav-link.toggle i {
    font-size: 12px;
    -webkit-margin-start: 2px;
    margin-inline-start: 2px;
    transition: transform 0.4s ease-out;
}

.header-area .nav-link.toggle:hover i {
    transform: rotate(-90deg);
}

.header-area .nav-link:hover .menu-dropdown {
    transform: none;
}

.header-area .nav-link:hover,
.header-area .nav-link.active,
.header-area .nav-link:focus {
    color: var(--color-primary);
}

.header-area .main-navbar .navbar {
    position: inherit;
    padding: 0;
}

.header-area .main-navbar .navbar .navbar-brand {
    padding: 0;
    margin: 0;
}

.header-area .main-navbar .nav-item {
    position: relative;
    margin-left: 10px;
    margin-right: 10px;
}

.header-area .main-navbar .menu-dropdown {
    position: absolute;
    top: calc(100% - 16px);
    left: 0;
    z-index: 99;
    opacity: 0;
    width: 200px;
    display: block;
    visibility: hidden;
    list-style: none;
    margin: 0;
    padding: 0;
    border-radius: 5px;
    padding: 15px 0px 15px 0px;
    background-color: var(--color-white);
    box-shadow: 0px 0px 30px 0px rgba(var(--color-dark-rgb), 0.15);
    transform: translateY(0);
    transition: opacity 0.2s ease-out, visibility 0.2s ease-out;
}

.header-area .main-navbar .menu-dropdown .nav-item {
    margin: 0;
}

.header-area .main-navbar .menu-dropdown .nav-link {
    display: block;
    padding: 5px 30px;
    font-size: var(--font-sm);
}

.header-area .main-navbar .menu-dropdown .nav-link:hover {
    color: var(--color-primary);
}

.header-area .main-navbar .menu-dropdown .nav-link:hover.toggle i {
    transform: translateY(-50%) rotate(-90deg);
}

.header-area .main-navbar .menu-dropdown .nav-link.toggle i {
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

.header-area .main-navbar .menu-dropdown .menu-dropdown .nav-item {
    margin: 0;
}

.header-area .main-navbar .menu-dropdown .menu-dropdown .nav-item a:hover::before {
    transform: scaleY(0);
}

.header-area .main-navbar .menu-dropdown .menu-dropdown .nav-item a.active::before {
    transform: scaleY(0);
}

.header-area .menu-toggler {
    width: 22px;
    height: 20px;
    padding: 0;
    border: 0;
    background: transparent;
    z-index: 1000;
}

.header-area .menu-toggler:focus {
    box-shadow: none !important;
}

.header-area .menu-toggler span {
    position: relative;
    display: block;
    width: 22px;
    height: 2px;
    background: var(--color-dark);
    border-radius: 10px;
    transition: transform 200ms 0ms, top 200ms 160ms;
}

.header-area .menu-toggler span:nth-child(1) {
    top: -4px;
}

.header-area .menu-toggler span:nth-child(3) {
    top: 4px;
}

.header-area .menu-toggler.active span:nth-child(1) {
    top: 0;
    transform: rotateZ(45deg);
    transition: top 200ms 0ms, transform 200ms 160ms;
}

.header-area .menu-toggler.active span:nth-child(2) {
    transform: scale(0);
}

.header-area .menu-toggler.active span:nth-child(3) {
    top: -4px;
    transform: rotateZ(-45deg);
    transition: top 200ms 0ms, transform 200ms 160ms;
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown {
    top: 0;
    opacity: 0;
    left: 200px;
    visibility: hidden;
    transform: translateY(5px);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown {
    top: 0;
    opacity: 0;
    left: 200px;
    visibility: hidden;
    transform: translateY(5px);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown {
    top: 0;
    opacity: 0;
    left: 200px;
    visibility: hidden;
    transform: translateY(5px);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown {
    top: 0;
    opacity: 0;
    left: 200px;
    visibility: hidden;
    transform: translateY(5px);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown {
    top: 0;
    opacity: 0;
    left: 200px;
    visibility: hidden;
    transform: translateY(5px);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown {
    top: 0;
    opacity: 0;
    left: 200px;
    visibility: hidden;
    transform: translateY(5px);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li:hover .menu-dropdown {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li.active a {
    color: var(--color-primary);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li:hover .menu-dropdown {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li .menu-dropdown li:hover .menu-dropdown {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li .menu-dropdown li:hover .menu-dropdown {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li .menu-dropdown li:hover .menu-dropdown {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.header-area .main-navbar .navbar-nav .nav-item .menu-dropdown li:hover .menu-dropdown {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.header-area .main-navbar .navbar-nav .nav-item:hover .menu-dropdown {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.header-area .nice-select {
    border: none;
    padding-right: 0;
    padding-left: 25px;
    background: transparent;
    color: var(--color-dark);
}

.header-area .nice-select:not(.list) {
    font-weight: var(--font-bold);
}

.header-area .nice-select::after {
    width: auto;
    height: auto;
    border-radius: 0;
    border: none;
    content: "\f0ac";
    font-family: "Font Awesome 5 Pro";
    font-size: 20px;
    top: 50%;
    left: 0;
    font-weight: 300;
    margin: 0;
    transform: translateY(-50%);
}

.header-area .nice-select .list {
    min-width: 100px;
    height: auto;
    background-color: var(--color-white);
    box-shadow: 0px 0px 30px 0px rgba(var(--color-medium-rgb), 0.15);
}

.header-area .nice-select .list li {
    min-height: 30px;
    line-height: 30px;
}

.header-area .btn-icon {
    font-size: 20px;
    font-weight: 300;
}

.header-area .main-responsive-nav {
    display: none;
}

.header-area .mobile-menu {
    visibility: hidden;
}

@media (max-width: 1199.98px) {
    .header-area {
        background: rgba(var(--color-white-rgb), 0.9);
        -webkit-backdrop-filter: saturate(180%) blur(20px);
        backdrop-filter: saturate(180%) blur(20px);
        box-shadow: 0px 8px 60px rgba(24, 24, 24, 0.1);
    }

    .header-area.is-sticky {
        position: fixed;
        top: 0;
        width: 100%;
    }

    .header-area .main-responsive-nav {
        display: block;
        height: 60px;
        line-height: 60px;
    }

    .header-area .main-responsive-nav>div {
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    .header-area .main-navbar {
        display: none;
    }

    .mobile-menu {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 0;
        overflow: hidden;
        overflow-y: scroll;
        transition: all 0.8s ease;
        z-index: 999;
    }

    .mobile-menu .mobile-menu-wrapper {
        margin-top: 60px;
        padding: 0 20px 30px;
        display: flex;
        flex-direction: column;
        width: 100%;
        background: var(--color-white);
        box-shadow: 0px 8px 60px rgba(24, 24, 24, 0.1);
    }

    .mobile-menu .navbar-nav {
        width: 100%;
        -webkit-margin-start: 0;
        margin-inline-start: 0;
    }

    .mobile-menu .navbar-nav li a {
        padding: 10px 0;
        border-bottom: 1px solid var(--border-color);
        transition: all 700ms ease;
    }

    .mobile-menu .navbar-nav li ul {
        -webkit-padding-start: 12px;
        padding-inline-start: 12px;
        list-style-type: none;
    }

    .mobile-menu .navbar-nav li li a {
        font-size: 14px;
    }

    .mobile-menu .more-option {
        padding-top: 20px;
        margin-top: 20px;
        justify-content: center;
    }

    .mobile-menu li.nav-item:not(.show) ul {
        display: none;
    }

    .mobile-menu li.nav-item.show>.toggle {
        position: relative;
    }

    .mobile-menu li.nav-item.show>.toggle i::before {
        content: "\f068";
    }

    .mobile-menu .nav-link.toggle {
        position: relative;
    }

    .mobile-menu .nav-link.toggle i {
        position: absolute;
        top: 50%;
        right: 0;
        transform: translateY(-50%);
    }

    .mobile-menu .nav-link.toggle:hover i {
        transform: translateY(-50%);
    }

    .mobile-menu-active .mobile-menu {
        visibility: visible;
        height: 100vh;
    }
}

/*# sourceMappingURL=header.css.map */

